--- a/frontend/src/components/aftergen/agDatasetExplorer/agDatasetExplorer.css
+++ b/frontend/src/components/aftergen/agDatasetExplorer/agDatasetExplorer.css
@@ -16,9 +16,11 @@
     border-radius: 15px 15px 20px 20px;
 }
 .agTree{
-    margin-top: 52px;
+    margin-top: 8px;
     /* margin-right: 150px; */
-    margin-left: 10px;
+    margin-left: 100px;
+    position: absolute;
+    text-align: center;
 }
 .headDE{
     height: 46px;
@@ -31,6 +33,7 @@
     height: calc(100% - 50px);
     /* position: absolute; */
     width:100%;
+    position: relative;
     /* background-color: beige; */
 }
 #boxTitleDE {
