--- a/frontend/src/components/aftergen/agPreviewPane/agPreviewPane.css
+++ b/frontend/src/components/aftergen/agPreviewPane/agPreviewPane.css
@@ -10,21 +10,27 @@
     border-right: 2px solid #40219980;
     border-radius: 15px 15px 20px 20px;
 }
-
+.bodyPP{
+    height: calc(100% - 50px);
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.value-container {
+    text-align: center;
+}
+.value-container img{
+    width: 150px;
+    height: 200px;
+    overflow: hidden;
+}
 .headPP {
     height: 46px;
     width: calc(100% - 8px);
-
     background: linear-gradient(to top, #DED6FF, #40219960);
-        border: 2px solid #40219980;
-        border-radius: 50px 50px 200px 200px;
-}
-
-.bodyPP {
-    height: calc(100% - 50px);
-    /* position: absolute; */
-    width: 100%;
-    /* background-color: beige; */
+    border: 2px solid #40219980;
+    border-radius: 50px 50px 200px 200px;
 }
 #boxTitlePP {
     font-family: "Inter", sans-serif;
@@ -33,7 +39,6 @@
     align-items: center;
     letter-spacing: 1px;
 }
-
 .leftlistPP {
     text-align: left;
     list-style: none;
@@ -41,9 +46,7 @@
     margin-left: 10px;
     margin-top: 0px;
 }
-
 .leftlistPP li{
     left: 0px;
     margin-top: 0px;
-    /* margin-bottom: 100px; */
 }
